<resources>
    <string name="app_name">分期拍</string>
    <string name="et_account_hint">请输入手机号</string>
    <string name="et_password_hint">请输入密码</string>
    <string name="et_image_password_hint">验证码密码</string>
    <string name="et_sms_password_hint">请输入验证码</string>
    <string name="image_password_hint">请输入右侧验证码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="phone">手        机</string>
    <string name="password">密        码</string>
    <string name="sms_password">验证码</string>
    <string name="get_sms">获取验证码</string>
    <string name="login">登录</string>
    <string name="up_true">确认并提交</string>
    <string name="success">成功</string>
    <string name="login_loading">登录中...</string>
    <string name="login_by_pass">账号登录</string>
    <string name="login_by_phone">验证码登录</string>
    <string name="no_account"><u>免费注册</u></string>
    <string name="forget_password">密码找回</string>
    <string name="home">首页</string>
    <string name="cart">增值服务</string>
    <string name="merchandise">我要竞拍</string>
    <string name="community">我要分期</string>
    <string name="my">我的</string>
    <string name="cancle">取消</string>
    <string name="reset">重置</string>
    <string name="passed">已通过</string>
    <string name="stay_by">待通过</string>
    <string name="no_passed">未通过</string>
    <string name="yes_watch">已关注</string>
    <string name="watch">已关注</string>
    <string name="search_user">用户</string>
    <string name="invitation">邀请</string>
    <string name="choose">选择</string>
    <string name="add">添加</string>
    <string name="time">时间</string>
    <string name="instructions">说明</string>
    <string name="commit_msg">正在提交,请稍后...</string>
    <string name="review_msg">正在验证,请稍后...</string>
    <string name="search_msg">正在查询,请稍后...</string>
    <string name="update_msg">正在检查更新,请稍后...</string>
    <string name="del_msg">正在删除,请稍后...</string>
    <string name="no_net">未链接网络</string>
    <string name="most">查看更多...</string>
    <string name="comit_error">操作异常,请重新操作</string>
    <string name="system_error">系统错误</string>
    <string name="collect_success">已收藏 </string>
    <string name="collect_fail">已取消收藏 </string>
    <string name="del_success">删除成功</string>
    <string name="villain_msg">您现在在恶人谷中，无权限进行此操作</string>
    <string name="commit_success">提交成功</string>
    <string name="commit_error">提交失败</string>
    <string name="report_success">举报成功</string>
    <string name="report_error">举报失败</string>
    <string name="save_success">保存成功</string>
    <string name="save_error">保存失败</string>
    <string name="watch_success">关注成功</string>
    <string name="watch_error">关注失败</string>
    <string name="cancel_watch_success">取消关注成功</string>
    <string name="cancel_watch_error">取消关注失败</string>
    <string name="invite_success">邀请成功</string>
    <string name="invite_error">邀请失败</string>
    <string name="remarks_success">备注成功</string>
    <string name="remarks_fail">备注失败</string>
    <string name="filtrate">筛选</string>
    <string name="unlimited">不限</string>
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="folder_all">All Images</string>
    <string name="preview">Preview</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">Select images amount is limit</string>
    <string name="primary_password">原密码</string>
    <string name="register">注册</string>
    <string name="qq_login">QQ登录</string>
    <string name="wx_longin">微信登录</string>
    <string name="et_register_hint">请输入验证码</string>
    <string name="et_set_password_hint">设置密码</string>
    <string name="et_set_username">请输入昵称</string>
    <string name="et_set_confirm_password_hint">确认密码</string>
    <string name="et_phone_hint">请输入手机号码</string>
    <string name="btn_send_register">发送验证码</string>
    <string name="register_invite">如果您有朋友的邀请码,请输入</string>
    <string name="register_agreement">注册协议</string>
    <string name="option_china">选填</string>
    <string name="btn_back">返回</string>
    <string name="agreement_content">我已阅读并同意</string>
    <string name="agreement"><u>分 期 拍 用 户 协 议</u></string>
    <string name="register_problem">您操作过程中遇到任何问题</string>
    <string name="register_tel">请拨打客服电话:4008386777</string>
    <string name="call_to_me">致电我们</string>
    <string name="forget_password_titlebar">忘记密码</string>
    <string name="forget_password_affirm_account">确认账号</string>
    <string name="forget_password_safe_verify">安全验证</string>
    <string name="forget_password_revamp_password">修改密码</string>
    <string name="forget_password_next">下一步</string>
    <string name="forget_password_username_phone">手机号</string>
    <string name="forget_password_code">请输入右图验证码</string>
    <string name="forget_password_other"><u>换一张</u></string>
    <string name="forget_password_verify">验证</string>
    <string name="forget_password_commit">确认提交</string>
    <string name="forget_password_new_password">新密码</string>
    <string name="forgrt_password_code_hint">请输入手机短信中的验证码</string>
    <string name="forgrt_password_rule_hint">密码需要填写6-20位字符,必须包含英文字母或数字</string>
    <string name="weibosdk_toast_auth_failed">授权失败</string>
    <string name="my_money">我的资金</string>
    <string name="my_customer">客服中心</string>
    <string name="my_set">设置</string>
    <string name="my_watch_list">我关注</string>
    <string name="my_watch_me">关注我</string>
    <string name="my_integral">我的积分</string>
    <string name="my_contacts">我的人脉</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_invite">我的邀请</string>
    <string name="my_draft">我的草稿</string>
    <string name="my_answer">我的回答</string>
    <string name="my_consult">我的资讯</string>
    <string name="my_praise">我的赞</string>
    <string name="my_no_data">无数据</string>
    <string name="my_search_watch">搜索我关注</string>
    <string name="my_search_watch_me">搜索关注我</string>
    <string name="setting">设置</string>
    <string name="setting_new_msg">新消息通知</string>
    <string name="setting_voice">声音</string>
    <string name="setting_shake">震动</string>
    <string name="setting_cache">清除数据缓存</string>
    <string name="setting_msg_remind">消息提醒</string>
    <string name="setting_update">版本更新</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_about">关于</string>
    <string name="setting_jhrule">江湖公约</string>
    <string name="exit">退出当前帐号</string>
    <string name="person_info">个人信息</string>
    <string name="info_user_name">用户名</string>
    <string name="info_account">账号</string>
    <string name="info_about">简介</string>
    <string name="info_password">密码</string>
    <string name="info_creditworthiness">信誉度</string>
    <string name="info_base">基本信息</string>
    <string name="info_job">职业信息</string>
    <string name="info_name">姓名</string>
    <string name="info_sex">性别</string>
    <string name="info_birthday">生日</string>
    <string name="info_location">所在地</string>
    <string name="info_tel">电话</string>
    <string name="info_phone">电话：</string>
    <string name="info_addr">地址：</string>
    <string name="info_open">公开基本资料</string>
    <string name="info_company">公司</string>
    <string name="info_job_">职务</string>
    <string name="info_new_password">确认新密码</string>
    <string name="info_now_password">当前密码</string>
    <string name="info_revamp">修改</string>
    <string name="info_password_text">请输入密码</string>
    <string name="info_new_password_text">请输入新密码</string>
    <string name="info_revamp_name_text">更改名字</string>
    <string name="info_revamp_name_text_hint">好名字可以让您的朋友更容易记住您。</string>
    <string name="info_save">保存</string>
    <string name="info_error">失败</string>
    <string name="info_revamp_binding">修改绑定</string>
    <string name="info_revamp_phone">修改绑定手机</string>
    <string name="info_new_phone">请输入新手机号码</string>
    <string name="info_start_man">联合发起人</string>
    <string name="info_set_account">请设置账号</string>
    <string name="user_name">昵称</string>
    <string name="wiki_entrier_detials">词条详情</string>
    <string name="wiki_detials_edito">我要编辑</string>
    <string name="wiki_share">分享到</string>
    <string name="wiki_share_qq">QQ</string>
    <string name="wiki_share_weibo">微博</string>
    <string name="wiki_share_wechat">微信好友</string>
    <string name="wiki_share_friend">朋友圈</string>
    <string name="wiki_share_report">举报</string>
    <string name="wiki_share_history">修改历史</string>
    <string name="wiki_share_collect">收藏</string>
    <string name="wiki_cause">修改原因:</string>
    <string name="wiki_report_ad">垃圾广告</string>
    <string name="wiki_report_sham">虚假信息</string>
    <string name="wiki_report_attack">人身攻击</string>
    <string name="wiki_report_other">其他理由</string>
    <string name="wiki_entier_editor">编辑词条</string>
    <string name="wiki_entier_release">发布</string>
    <string name="wiki_entier_explain">请输入修改说明 (选填)</string>
    <string name="wiki_entier_cause">请选择修改原因</string>
    <string name="wiki_report_reason_hint">请输入举报原因</string>
    <string name="wiki_report_reason">举报原因</string>
    <string name="wiki_report_confirm">确定</string>
    <string name="wiki_module">选择板块</string>
    <string name="wiki_entrier_release">发表词条</string>
    <string name="wiki_entrier_type">请选择词条类型</string>
    <string name="wiki_entrier_name">请输入词条名称</string>
    <string name="wiki_entrier_content">请输入词条的主要内容及关键信息</string>
    <string name="message">消息</string>
    <string name="read">已读</string>
    <string name="no_read">未读</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="img_list">图片列表</string>
    <string name="group">创建群</string>
    <string name="chat_edit_hint">请输入内容...</string>
    <string name="send">发送</string>
    <string name="copy">复制</string>
    <string name="user_attention">关注</string>
    <string name="user_send">发送信息</string>
    <string name="user_card">发送名片</string>
    <string name="user_remarks">备注</string>
    <string name="express_often_plate">常去版块</string>
    <string name="express_all_plate">全部版块</string>
    <string name="express_message_release">发布资讯</string>
    <string name="express_title_release">请输入标题</string>
    <string name="express_module">选择板块</string>
    <string name="express_detials">资讯详情</string>
    <string name="express_answer">请输入回复</string>
    <string name="express_reply">发表回复</string>
    <string name="express_entrier_type">请选择区域</string>
    <string name="express_entrier_label">请选择标签</string>
    <string name="express_entrier_name">请输入资讯标题</string>
    <string name="express_entrier_content">请输入资讯内容</string>
    <string name="express_new_reply">最新回复</string>
    <string name="express_new">最新发布</string>
    <string name="express_essence">精华资讯</string>
    <string name="express_supply">供货</string>
    <string name="express_requirement">需求</string>
    <string name="help_new">最新求助</string>
    <string name="help_no_answer">未回答</string>
    <string name="help_message_release">发布求助</string>
    <string name="help_hot">热门求助</string>
    <string name="help_invitation">邀请回答</string>
    <string name="help_details">求助详情</string>
    <string name="help_invitation_hint">搜索您想要邀请的人</string>
    <string name="no_internet">网络未连接</string>
    <string name="no_password">密码不一致</string>
    <string name="password_error">请检查网络,核对密码是否正确</string>
    <string name="login_password">登录密码</string>
    <string name="phone_on">手        机：</string>
    <string name="image_password_on">验证码：</string>
    <string name="confirm_password">确认新密码：</string>
    <string name="new_password">新密码：</string>
    <string name="old_password">原密码：</string>
    <string name="img_verify">图形验证：</string>
</resources>