<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:orientation="vertical" >

    <com.fenqipai.fenqipaiandroid.view.TitleBarView
        android:id="@+id/forgot_titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.fenqipai.fenqipaiandroid.view.TitleBarView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10dip"
        android:layout_marginRight="@dimen/margin_10dip"
        android:layout_marginTop="@dimen/margin_10dip"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_fragment_chamfer"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48dip"
                android:layout_marginLeft="@dimen/margin_10dip"
                android:layout_marginRight="@dimen/margin_10dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/login_password"
                    android:textColor="@color/car_detials_name_text"
                    android:textSize="@dimen/text_size_18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1dip"
                android:layout_marginLeft="@dimen/margin_5dip"
                android:layout_marginRight="@dimen/margin_5dip"
                android:background="@color/car_text_orange" />

            <LinearLayout
                android:id="@+id/primary_password_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_15dip"
                    android:text="@string/old_password"
                    android:textColor="@color/car_detials_name_text"
                    android:textSize="@dimen/text_size_16sp" />


                <com.fenqipai.fenqipaiandroid.view.ContainsEmojiEditText
                    android:id="@+id/primary_password"
                    style="@style/EditViewStyle"
                    android:layout_marginLeft="@dimen/margin_15dip"
                    android:layout_weight="1"
                    android:background="@drawable/bg_withdrawals_et"
                    android:hint="@string/et_password_hint"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size_14sp" />

                <Button
                    android:id="@+id/forgot_password"
                    android:layout_width="@dimen/margin_75dip"
                    android:layout_height="@dimen/margin_34dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_15dip"
                    android:layout_marginRight="@dimen/margin_15dip"
                    android:background="@drawable/btn_orange"
                    android:text="@string/forget_password"
                    android:textColor="@color/car_text_orange"
                    android:textSize="@dimen/text_size_12sp" />
            </LinearLayout>

            <View
                android:id="@+id/primary_password_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_0.5dip"
                android:background="@color/gray_line"
                android:layout_marginLeft="@dimen/margin_10dip"
                android:layout_marginRight="@dimen/margin_10dip" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_15dip"
                    android:text="@string/new_password"
                    android:textColor="@color/car_detials_name_text"
                    android:textSize="@dimen/text_size_16sp" />

                <com.fenqipai.fenqipaiandroid.view.ContainsEmojiEditText
                    android:id="@+id/new_password"
                    style="@style/EditViewStyle"
                    android:background="@drawable/bg_withdrawals_et"
                    android:layout_marginLeft="@dimen/margin_15dip"
                    android:layout_marginRight="@dimen/margin_15dip"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/new_password_hint"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size_14sp" >
                </com.fenqipai.fenqipaiandroid.view.ContainsEmojiEditText>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_0.5dip"
                android:background="@color/gray_line"
                android:layout_marginLeft="@dimen/margin_10dip"
                android:layout_marginRight="@dimen/margin_10dip" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_15dip"
                    android:text="@string/confirm_password"
                    android:textColor="@color/car_detials_name_text"
                    android:textSize="@dimen/text_size_16sp" />

                <com.fenqipai.fenqipaiandroid.view.ContainsEmojiEditText
                    android:id="@+id/conf_password"
                    style="@style/EditViewStyle"
                    android:layout_marginRight="@dimen/margin_15dip"
                    android:background="@drawable/bg_withdrawals_et"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/new_password_hint"
                    android:inputType="textPassword" >
                </com.fenqipai.fenqipaiandroid.view.ContainsEmojiEditText>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/common"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_48dip"
            android:layout_marginTop="@dimen/margin_20dip"
            android:background="@drawable/bg_btn_orange"
            android:text="@string/wiki_report_confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_48dip"
            android:layout_marginBottom="@dimen/margin_20dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_problem"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/text_size_12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_tel"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_12sp" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/margin_1dip"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_12dip"
                android:background="@color/gray_line" />

            <LinearLayout
                android:id="@+id/call_to_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/btn_phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_to_me"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/text_size_10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>