<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bill_bg_color"
    android:orientation="vertical" >

    <com.fenqipai.fenqipaiandroid.view.TitleBarView
        android:id="@+id/cart_titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.fenqipai.fenqipaiandroid.view.TitleBarView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10dip"
        android:layout_marginRight="@dimen/margin_10dip"
        android:layout_marginTop="@dimen/margin_10dip"
        android:background="@drawable/bg_fragment_chamfer"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_48dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_10dip"
                android:text="手机号绑定"
                android:textColor="@color/car_detials_name_text"
                android:textSize="@dimen/text_size_18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin_5dip"
            android:layout_marginRight="@dimen/margin_5dip"
            android:background="@color/car_text_orange" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_48dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15dip"
                android:text="@string/phone_on"
                android:textColor="@color/car_detials_name_text"
                android:textSize="@dimen/text_size_16sp" />

            <com.fenqipai.fenqipaiandroid.view.ContainsEmojiEditText
                android:id="@+id/mobile_account"
                android:layout_width="0dp"
                android:layout_height="@dimen/text_height"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/et_account_hint"
                android:inputType="number"
                android:paddingLeft="@dimen/forget_password_left_padding"
                android:textColor="@color/car_detials_price_et"
                android:textColorHint="@color/gray_color_line"
                android:textSize="@dimen/text_size_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_0.5dip"
            android:layout_marginLeft="@dimen/margin_10dip"
            android:layout_marginRight="@dimen/margin_10dip"
            android:background="@color/gray_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_48dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15dip"
                android:text="@string/image_password_on"
                android:textColor="@color/car_detials_name_text"
                android:textSize="@dimen/text_size_16sp" />

            <com.fenqipai.fenqipaiandroid.view.ContainsEmojiEditText
                android:id="@+id/et_set_register"
                android:layout_width="0dp"
                android:layout_height="@dimen/text_height"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/et_sms_password_hint"
                android:inputType="number"
                android:paddingLeft="@dimen/forget_password_left_padding"
                android:textColor="@color/car_detials_price_et"
                android:textColorHint="@color/gray_color_line"
                android:textSize="@dimen/text_size_16sp" />

            <Button
                android:id="@+id/btnSendCode"
                android:layout_width="@dimen/margin_75dip"
                android:layout_height="@dimen/margin_34dip"
                android:layout_marginRight="@dimen/margin_15dip"
                android:background="@drawable/btn_orange"
                android:text="@string/get_sms"
                android:textColor="@color/car_text_orange"
                android:textSize="@dimen/text_size_12sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/lin_img_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_48dip"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone" >

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_0.5dip"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/margin_10dip"
                android:layout_marginRight="@dimen/margin_10dip"
                android:background="@color/gray_color_line" />

            <TextView
                android:id="@+id/yzm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_15dip"
                android:text="@string/img_verify"
                android:textColor="@color/car_detials_name_text"
                android:textSize="@dimen/text_size_16sp" />

            <com.fenqipai.fenqipaiandroid.view.ContainsEmojiEditText
                android:id="@+id/img_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_height"
                android:background="@color/transparent"
                android:inputType="text"
                android:paddingLeft="@dimen/forget_password_left_padding"
                android:textColor="@color/car_detials_price_et"
                android:textColorHint="@color/gray_color_line"
                android:textSize="@dimen/text_size_16sp" 
                android:layout_toRightOf="@+id/yzm"
                android:ems="10"
                android:hint="@string/image_password_hint" >

            </com.fenqipai.fenqipaiandroid.view.ContainsEmojiEditText>

            <ImageView
                android:id="@+id/ic_invite3"
                android:layout_width="@dimen/margin_75dip"
                android:layout_height="@dimen/margin_34dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_15dip"
                android:scaleType="fitXY"
                android:src="@drawable/bg_group" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/common"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_48dip"
        android:layout_margin="@dimen/margin_10dip"
        android:layout_marginTop="@dimen/margin_20dip"
        android:background="@drawable/bg_btn_orange"
        android:text="@string/wiki_report_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_48dip"
        android:layout_margin="@dimen/margin_10dip"
        android:layout_marginBottom="@dimen/margin_20dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_problem"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/text_size_12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_tel"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_12sp" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/margin_1dip"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_12dip"
            android:background="@color/gray_line" />

        <LinearLayout
            android:id="@+id/call_to_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/btn_phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_to_me"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/text_size_10sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>